Fixes all over the place on the new http interface. All that is needed to move it in place of the old crappy interface is to finish the search interface for multiple hits. Also changed the constructor for PRFdb so it no longer requires a hash reference I would like to change PRFGraph RNAFolders etc to be similar to this, it is a nice change

--- a/detail.html
+++ b/detail.html
@@ -25,6 +25,7 @@ $information->{long_species} = ucfirst($long_species);
 my $species = $information->{species};
 foreach my $structure (@{$info}) {
   my $mfe_id = $structure->[0];
+  $information->{mfe_id} = $mfe_id;
   $information->{mfe} = $structure->[12];
   my $boot_table = "boot_$species";
   my $boot_stmt = qq"SELECT mfe_values, mfe_mean, mfe_sd, mfe_se, zscore FROM $boot_table WHERE mfe_id = ?";
