--- a/download_parens.html
+++ b/download_parens.html
@@ -1,8 +1,8 @@
 <%init>
  $r->content_type('application/octet-stream');
  my $stmt = qq(SELECT genome.comment,mfe.accession,mfe.parens,mfe.start FROM genome,mfe WHERE mfe.id = ? and mfe.genome_id=genome.id);
- my $seq = $db->MySelect({statement =>$stmt, vars =>[$id], type =>'row'});
- my $filename = qq($seq->[1]_$seq->[3].parens);
+ my $seq = $db->MySelect({statement =>$stmt, vars =>[$mfeid], type =>'row'});
+ my $filename = qq"$seq->[1]_$seq->[3].parens";
  $filename =~ s/SGDID://g;
  $r->headers_out->add('Content-disposition' => ("attachment; filename=$filename"));
  print "#$seq->[1] starting at $seq->[3]: $seq->[0]
@@ -10,5 +10,5 @@ $seq->[2]
 ";
 </%init>
 <%args>
- $id => undef;
+ $mfeid => undef;
 </%args>
