--- a/list_slipsites.html
+++ b/list_slipsites.html
@@ -7,23 +7,7 @@
   <td width="25%"><div align="center"><strong><font color="#FFFFFF">#Folds</font></strong></div>
   </td>
 </tr>
-% my ($slipstart, $slipseq, $pknotscount, $orf_start, $orf_stop, $id);
-% my $slipsites_stmt = qq"SELECT distinct start, slipsite, count(id) FROM mfe WHERE accession = ? AND start < (SELECT orf_stop FROM genome WHERE accession = ?) GROUP BY start ORDER BY start";
-% my $slipsite_information = $db->MySelect(statement => $slipsites_stmt, vars => [$accession, $accession],);
-% my $table = "landscape_$species";
-% my $landscape_num = $db->MySelect(statement => "SELECT count(id) FROM $table WHERE accession = '$accession'", type => 'single');
-% my $num_stops_printed = 0;
-% my $num_starts_printed = 0;
-% my $slipcount = 0;
-% my $sig_count = 0;
-% while (my $slip_info = shift(@{$slipsite_information})) {
-%   $slipcount++;
-%   $slipstart = $slip_info->[0];
-%   $slipseq = $slip_info->[1];
-%   $pknotscount = $slip_info->[2];
-%   $sig_count += $pknotscount;
-%   if ($orf_start < $slipstart and $num_starts_printed == 0) {
-%     $num_starts_printed++;
+
 <tr>
  <td width="33%">
   <div align="center"><strong><font face="Courier New, Courier, mono">
@@ -38,9 +22,39 @@
  <td width="33%"><div align="center"><strong> </strong></div>
  </td>
 </tr>
+% my ($slipseq, $pknotscount, $id, $slipstart);
+% my $slipsites_stmt = qq"SELECT distinct start, slipsite, count(id) FROM mfe WHERE accession = ? AND start < (SELECT orf_stop FROM genome WHERE accession = ?) GROUP BY start ORDER BY start";
+% my $slipsite_information = $db->MySelect(statement => $slipsites_stmt, vars => [$accession, $accession],);
+% my $table = "landscape_$species";
+% my $landscape_num = $db->MySelect(statement => "SELECT count(id) FROM $table WHERE accession = '$accession'", type => 'single');
+% my $num_stops_printed = 0;
+% my $num_starts_printed = 0;
+% my $slipcount = 0;
+% my $sig_count = 0;
+% while (my $slip_info = shift(@{$slipsite_information})) {
+%   $slipcount++;
+%   $slipstart = $slip_info->[0];
+%   $slipseq = $slip_info->[1];
+%   $pknotscount = $slip_info->[2];
+%   $sig_count += $pknotscount;
+<tr>
+ <td width="33%">
+  <div align="center"><strong><font face="Courier New, Courier, mono">
+   <a href="/detail.html?accession=<% $accession %>&slipstart=<% $slipstart %>" title="View the detailed information for <% $accession %> at position <% $slipstart %>"><% $slipstart %></a>
+  </font></strong></div>
+ </td>
+ <td width="33%">
+  <div align="center"><strong><font face="Courier New, Courier, mono">
+   <% $slipseq %>
+  </font></strong></div>
+ </td>
+ <td width="33%">
+ <div align="center"><strong><font face="Courier New, Courier, mono">
+   <% $pknotscount %>
+  </font></strong></div>
+ </td>
+</tr>
 % }
-% if ($orf_stop <= $slipstart and $num_stops_printed == 0) {
-%   $num_stops_printed++;
 <tr>
  <td width="33%">
   <div align="center"><strong><font face="Courier New, Courier, mono">
@@ -55,23 +69,23 @@
  <td width="33%"><div align="center"><strong> </strong></div>
  </td>
 </tr>
-% }
-% if ($slipcount > 0) {
 <tr>
  <td width="33%">
    <div align="center"><strong><font face="Courier New, Courier, mono">
-    <a href="/detail?id=<% $id %>&accession=<% $accession %>" title="View the detailed information for all slipsites of <% $accession %>">All</a>
+    <a href="/detail.html?accession=<% $accession %>" title="View the detailed information for all slipsites of <% $accession %>">All</a>
   </font></strong></div>
  </td>
  <td width="33%"></td>
  <td width="33%"></td>
 </tr>
-% }
-% }
 </table>
 
 
 <%args>
   $accession => "SGDID:S000001"
   $species => "saccharomyces_cerevisiae"
+  $comment => "my_comment"
+  $omim_id => "omim_id"
+  $orf_start => "1"
+  $orf_stop => "0"
 </%args>
