--- a/search.html
+++ b/search.html
@@ -1,41 +1,43 @@
-% if ($query and $search_species_limit) {
+% if ($short or ($query and $search_species_limit)) {
 <%perl>
-my $query_statement = qq"SELECT * FROM genome WHERE ";
-if (defined($search_species_limit)) {
-  $query_statement .= qq"species = '$search_species_limit' AND ";
+my $query_statement;
+my $entries;
+if ($short) {
+  $query_statement = qq"SELECT * FROM genome WHERE accession = ?";
+  $entries = $db->MySelect(statement => $query_statement, type => 'hash', descriptor => 1, vars =>[$accession]);
+} else {
+  $query_statement = qq"SELECT * FROM genome WHERE ";
+  if ($search_species_limit ne 'all') {
+    $query_statement .= qq"species = '$search_species_limit' AND ";
+#  } elsif ($search_species_limit ne 'all') {
+#    $query_statement .= qq"species regexp '$search_species_limit' AND ";
+  }
+  my $mode = undef;
+  if (defined($mode)) {   ## SOME SNP STUFF
+    $query_statement .= qq"";
+  } else {
+    $query_statement .= qq"(species regexp '$query' OR genename regexp '$query' OR accession regexp '$query' OR locus regexp '$query' OR comment regexp '$query')";
+  }
+  $entries = $db->MySelect({statement => $query_statement, type => 'hash', descriptor => 1,});
 }
-elsif ($search_species_limit ne 'all') {
-  $query_statement .= qq"species regexp '$search_species_limit' AND ";
-}
-my $mode = undef;
-if (defined($mode)) {   ## SOME SNP STUFF
-  $query_statement .= qq"";
-}
-else {
-  $query_statement .= qq"(species regexp '$query' OR genename regexp '$query' OR accession regexp '$query' OR locus regexp '$query' OR comment regexp '$query')";
-}
-my $entries = $db->MySelect({statement => $query_statement, type => 'hash', descriptor => 1,});
+print "TESTME: $query_statement<br>\n";
 my @entries_keys = ();
+my $entries_count = 0;
 foreach my $c (keys %{$entries}) {
   push(@entries_keys, $c);
+  $entries_count++;
   my $slip_stmt = qq"SELECT count(distinct(start)), count(distinct(id)) FROM mfe WHERE accession = ?";
   my $slipsite_structure_count = $db->MySelect({statement => $slip_stmt, vars => [$entries->{$c}->{accession}], type => 'row',});
-  	$entries->{$c}->{slipsite_count} = $slipsite_structure_count->[0];
-	$entries->{$c}->{structure_count} = $slipsite_structure_count->[1];
-    } ## End foreach
-    my $entries_count = scalar keys %{$entries};
-    if ($entries_count == 0) {
-       print "  <p>No entry was found.</p><br>\n";
-#    } elsif ($entries_count == 1) {  
-#       print "   <p>1 match was found.</p>\n";
-#    } else {
-#       print "   <p><% $entries_count %> matches were found.</p><br>\n";
-    }
+  $entries->{$c}->{slipsite_count} = $slipsite_structure_count->[0];
+  $entries->{$c}->{structure_count} = $slipsite_structure_count->[1];
+} ## End foreach
+if ($entries_count == 0) {
+  print "  <p>No entry was found.</p><br>\n";
+}
 my $species = $entries->{$entries_keys[0]}->{species};
 my $accession = $entries->{$entries_keys[0]}->{accession};
 my $long_species;
 </%perl>
-<& list_slipsites.html, accession => $accession, species => $species &>
 % if ($entries_count == 1) {
 % $long_species = $entries->{$entries_keys[0]}->{species};
 % $long_species =~ s/_/ /g;
@@ -44,7 +46,10 @@ my $long_species;
 % my $accession = $entries->{$entries_keys[0]}->{accession};
 % my $comment = $entries->{$entries_keys[0]}->{comment};
 % my $omim_id = $entries->{$entries_keys[0]}->{omim_id};
+% my $orf_start = $entries->{$entries_keys[0]}->{orf_start};
+% my $orf_stop = $entries->{$entries_keys[0]}->{orf_stop};
 <& gene_summary.html, accession => $accession, genename => $genename, accession => $accession, long_species => $long_species, species => $species, comment => $comment, omim_id => $omim_id &>
+<& list_slipsites.html, accession => $accession, species => $species, comment => $comment, omim_id => $omim_id, orf_start => $orf_start, orf_stop => $orf_stop &>
 <& print_gene.html, accession => $accession &>
 % }
 
@@ -79,7 +84,9 @@ Search the PRFdb for an arbitrary sequence using BLAST.<br>
 <%init>
 </%init>
 <%args>
+  $short => 0
+  $accession => undef
   $query => undef
-  $search_species_limit => 'saccharomyces_cerevisiae'
+  $search_species_limit => undef
   $blastsearch => undef
 </%args>
