--- a/single_detail.html
+++ b/single_detail.html
@@ -9,11 +9,7 @@
 	</td>
 	<td>
         <% $information->{genename} %>,
-% if ($information->{short_accession}) {
-	  <a href="http://db.yeastgenome.org/cgi-bin/locus.pl?locus=<% $information->{short_accession} %>" rel="external" target="_blank">SGD link</a>
-% } elsif ($information->{genbank_accession}) {
-          <a href="http://www.ncbi.nlm.nih.gov/sites/entrez?db=nuccore&cmd=&term=<% $information->{genbank_accession} %>&go=Go" rel="external" target="_blank">NCBI link</a>
-% }
+<& link_out.html, accession => $information->{accession} &>
 	</td>
       </tr>
     </table>
