--- a/single_detail.html
+++ b/single_detail.html
@@ -164,7 +164,7 @@
       <tr>
 	<td text-align="right"><span style="whitespace: nowrap">
 	  <div class="fixedfont"><font face="Courier New, Courier, mono"><% $information->{numbers} %></font>
-	  <font face="Courier New, Courier, mono" size="-3"><a href="/search_local_blast.html?accession=<% $information->{accession} %>&start=<% $information->{slipstart} %>">&nbsp;Blast&nbsp;subsequence</a>
+	  <font face="Courier New, Courier, mono" size="-3"><a href="/search_blast.html?location=local&accession=<% $information->{accession} %>&start=<% $information->{slipstart} %>">&nbsp;Blast&nbsp;subsequence</a>
           </font></div>
          </span>
         </td>
