--- a/distribution.html
+++ b/distribution.html
@@ -1,18 +1,16 @@
 % if ($species and $seqlength and $slipsites) {
 %  if (!defined($overlayquery)) {
 
-
 <center>
 <form method="post" action="overlaysearch_perform" enctype="application/x-www-form-urlencoded">
 <input type="text" name="overlayquery"  size="20" /><input type="submit" name="search overlay" value="Overlay" /></form>
 </center>
 
-
 %  }
 
-
 <center>
-<p>This is the <i><% $species %></i> distribution for <% $slipsites %> slipsites.
+% my $long_species = HTMLMisc::Make_Species($species);
+<p>This is the <i><% $long_species %></i> distribution for <% $slipsites %> slipsites.
 <br>
 % my $filename = qq"$config->{base}/images/cloud/${species}/cloud-${slipsites}-${seqlength}.png";
 % if (-f $filename) {
