search.html?short=1 is the way to get to individual signal details

--- a/distribution.html
+++ b/distribution.html
@@ -46,7 +46,7 @@ coordinates wihch share more than 1 sequence window.
 % while (my $line = <MAP>) { print  $line; }
 
 % } else {
-<p>Generating a new distribution for <% $species %> now.<br>
+<p>Generating a new distribution for <i><% HTMLMisc::Make_Species($species) %></i> now.<br>
 These graphs take about a minute to generate, this page will refresh with the freshly generated
 graph in one minute.</p>
 
