--- a/single_detail.html
+++ b/single_detail.html
@@ -24,7 +24,7 @@
 	</td>
 	<td>
 	<i>
-	  <% $information->{long_species} %>
+	  <% HTMLMisc::Make_Species($information->{species}) %>
 	</i>
 	</td>
 	<td rowspan="12" valign="top">
