Overlapping feynmans, circular feynman, lions, tigers, and bears!

--- a/single_detail.html
+++ b/single_detail.html
@@ -205,7 +205,10 @@
 	  <font face="Courier New, Courier, mono" size="-3">&nbsp;&nbsp;&nbsp;<a href="/download_bpseq.html?mfeid=<% $information->{mfe_id} %>">Download&nbsp;bpseq</a><br>&nbsp;&nbsp;&nbsp;Download
 <a href="/download_png.html?accession=<% $information->{accession} %>&format=png&mfeid=<% $information->{mfe_id} %>&species=<% $information->{species} %>">&nbsp;png,</a>
 <a href="/download_png.html?accession=<% $information->{accession} %>&format=pdf&mfeid=<% $information->{mfe_id} %>&species=<% $information->{species} %>">pdf,</a>
-<a href="/download_png.html?accession=<% $information->{accession} %>&format=ps&mfeid=<% $information->{mfe_id} %>&species=<% $information->{species} %>">ps</a>
+<a href="/download_png.html?accession=<% $information->{accession} %>&format=ps&mfeid=<% $information->{mfe_id} %>&species=<% $information->{species} %>">ps</a>, View
+<a href="/cfeynman.html?accession=<% $information->{accession} %>&mfeid=<% $information->{mfe_id} %>&species=<% $information->{species} %>">cfeynman graph</a>, Try
+<a href="/feynman_overlap.html?start=<% $information->{slipstart} %>&seqlength=<% $information->{seqlength} %>&accession=<% $information->{accession} %>">An overlap</a>
+
 <br>
 	  </font>
         </span>
