--- a/search.html
+++ b/search.html
@@ -95,7 +95,7 @@ my $long_species;
     </td>
     <td valign="top" width="10%">
       <div align="left">
-	  <a href="[% base %]/search.html?short=1&accession=<% $accession %>&species=<% $species %>" rel="external" target="_blank"><strong><% $accession %></strong></a>
+	  <a href="/search.html?short=1&accession=<% $accession %>&species=<% $species %>" rel="external" target="_blank"><strong><% $accession %></strong></a>
       </div>
     </td>
     <td valign="top" width="15%">
