some cleanup work in an attempt to catch a memory leak

--- a/distribution.html
+++ b/distribution.html
@@ -44,6 +44,7 @@ coordinates wihch share more than 1 sequence window.
 
 % open(MAP, "<$filename.map");
 % while (my $line = <MAP>) { print  $line; }
+% close(MAP);
 
 % } else {
 <p>Generating a new distribution for <i><% HTMLMisc::Make_Species($species) %></i> now.<br>
