--- a/download.html
+++ b/download.html
@@ -37,7 +37,7 @@
 <form method="post" action="http://prfdb.umd.edu/index.cgi/choose_download" enctype="application/x-www-form-urlencoded">
 <p>
 Download the entire table for the species of your choice:<br>
-  <& species_selector, select_name => "species" &>
+  <& species_selector.html, select_name => "species" &>
 <br>
 <input type="submit" name="download_species" value="Choose Download" /></p>
 </form>   </tr>
