--- a/filter.html
+++ b/filter.html
@@ -1,7 +1,7 @@
 <form method="post" action="filter.html" enctype="multipart/form-data">
 
 Filter on species:
-<& species_selector, select_name => "species" &>
+<& species_selector.html, select_name => "species" &>
 
 </select>And algorithm:
 <select name="algorithm" >
