--- a/search.html
+++ b/search.html
@@ -121,7 +121,7 @@ my $long_species;
 <center>
   To begin browsing the PRFdb, please enter your search terms below.<br>
   <input type="text" name="query"  size="20"> 
-  <& species_selector, select_name => "search_species_limit" &>
+  <& species_selector.html, select_name => "search_species_limit" &>
   <input type="submit" name="search submit" value="Search"></form>
 </center>
 
