--- a/single_detail.html
+++ b/single_detail.html
@@ -28,7 +28,7 @@
 	</i>
 	</td>
 	<td rowspan="12" valign="top">
-	  <div align="left"><a href="/help_detail.html#help_graph"><img src="<% $information->{charturl} %>" border="2"></a></div>
+	  <div align="left"><a href="/help_detail.html#help_graph"><img alt="Plot of occurences vs. MFE" title="Plot of occurences vs. MFE" src="<% $information->{charturl} %>" border="2"></a></div>
 	</td>
       </tr>
 
@@ -190,7 +190,8 @@
 	</td>
       </tr>
 
-      <tr>        <td text-align="right"><span style="whitespace: nowrap">
+      <tr>
+        <td text-align="right"><span style="whitespace: nowrap">
     	  <div class="fixedfont"><b><font face="Courier New, Courier, mono">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<% $information->{parsed} %></font></b>
 	  <font face="Courier New, Courier, mono" size="-3">
 	    &nbsp;&nbsp;&nbsp;&nbsp;<a href="/download_parsed.html?mfeid=<% $information->{mfe_id} %>">Download&nbsp;parsed</a>
