--- a/download_parens.html
+++ b/download_parens.html
@@ -1,7 +1,7 @@
 <%init>
  $r->content_type('application/octet-stream');
  my $stmt = qq(SELECT genome.comment,mfe.accession,mfe.parens,mfe.start FROM genome,mfe WHERE mfe.id = ? and mfe.genome_id=genome.id);
- my $seq = $db->MySelect({statement =>$stmt, vars =>[$mfeid], type =>'row'});
+ my $seq = $db->MySelect(statement =>$stmt, vars =>[$mfeid], type =>'row');
  my $filename = qq"$seq->[1]_$seq->[3].parens";
  $filename =~ s/SGDID://g;
  $r->headers_out->add('Content-disposition' => ("attachment; filename=$filename"));
