--- a/feynman_overlap.html
+++ b/feynman_overlap.html
@@ -4,9 +4,9 @@
 % foreach my $id (@{$mfe_ids}) {
 %  push(@ids, $id->[0]);
 % }
-% my $overlap_pic = new PRFGraph({config=>$config, ids => \@ids, mfe_id=> "$start-$seqlength", start => $start, accession => $accession});
-% my $overlap_url = $overlap_pic->Picture_Filename({type => 'ofeynman', url => 'url',});
-% my $overlap_output_filename = $overlap_pic->Picture_Filename({type => 'ofeynman',});
+% my $overlap_pic = new PRFGraph(config=>$config, ids => \@ids, mfe_id=> "$start-$seqlength", start => $start, accession => $accession);
+% my $overlap_url = $overlap_pic->Picture_Filename(type => 'ofeynman', url => 'url',);
+% my $overlap_output_filename = $overlap_pic->Picture_Filename(type => 'ofeynman',);
 % my $ofeynman_dimensions = {};
 % if (!-r $overlap_output_filename) {
 %  $ofeynman_dimensions = $overlap_pic->Make_OFeynman();
