--- a/generate_distribution.html
+++ b/generate_distribution.html
@@ -6,7 +6,7 @@ sub tmp_cloud {
   my $species = shift;
   my $slipsites = shift;
   my $seqlength = shift;
-  my $cloud = new PRFGraph({config=>$config});
+  my $cloud = new PRFGraph(config=>$config);
   my $suffix;
   my $pknots_only;
   foreach my $filter (@$filters) {
@@ -23,8 +23,8 @@ sub tmp_cloud {
    $suffix .= "-${slipsites}";
   }
   $suffix .= "-${seqlength}";
-  my $cloud_output_filename = $cloud->Picture_Filename({type => 'cloud', species => $species, suffix => $suffix,});
-  my $cloud_url = $cloud->Picture_Filename({type => 'cloud', species => $species, url => 'url', suffix => $suffix,});
+  my $cloud_output_filename = $cloud->Picture_Filename(type => 'cloud', species => $species, suffix => $suffix,);
+  my $cloud_url = $cloud->Picture_Filename(type => 'cloud', species => $species, url => 'url', suffix => $suffix,);
   my $boot_table = "boot_$species";
   my $points_stmt = qq"SELECT mfe.mfe, $boot_table.zscore, mfe.accession, mfe.knotp, mfe.slipsite, mfe.start, genome.genename FROM mfe, $boot_table, genome WHERE $boot_table.zscore IS NOT NULL AND mfe.mfe > -80 AND mfe.mfe < 5 AND $boot_table.zscore > -10 AND $boot_table.zscore < 10 AND mfe.species = ? AND mfe.seqlength = $seqlength AND mfe.id = $boot_table.mfe_id AND ";
   my $averages_stmt = qq"SELECT avg(mfe.mfe), avg($boot_table.zscore), stddev(mfe.mfe), stddev($boot_table.zscore) FROM mfe, $boot_table WHERE $boot_table.zscore IS NOT NULL AND mfe.mfe > -80 AND mfe.mfe < 5 AND $boot_table.zscore > -10 AND $boot_table.zscore < 10 AND mfe.species = ? AND mfe.seqlength = $seqlength AND mfe.id = $boot_table.mfe_id AND ";
@@ -39,11 +39,11 @@ sub tmp_cloud {
   }
   $points_stmt .= " mfe.genome_id = genome.id";
   $averages_stmt =~ s/AND $//g;
-  my $points = $db->MySelect({statement => $points_stmt, vars => [$species]});
-  my $averages = $db->MySelect({statement => $averages_stmt, vars => [$species], type => 'row'});
-  my $args;
+  my $points = $db->MySelect(statement => $points_stmt, vars => [$species]);
+  my $averages = $db->MySelect(statement => $averages_stmt, vars => [$species], type => 'row');
+  my %args;
   if (defined($pknots_only)) {
-   $args = {
+    %args = (
 	seqlength => $seqlength,
 	species => $species,
 	points => $points,
@@ -52,9 +52,9 @@ sub tmp_cloud {
 	url => $config->{base},
 	pknot => 1,
 	slipsites => $slipsites
-	};
+	);
    } else {
-    $args = {
+    %args = (
 	seqlength => $seqlength,
 	species => $species,
 	points => $points,
@@ -62,9 +62,9 @@ sub tmp_cloud {
 	filename => $cloud_output_filename,
 	url => $config->{base},
 	slipsites => $slipsites,
-       };
+       );
     }
-    my $cloud_data = $cloud->Make_Cloud($args);
+    my $cloud_data = $cloud->Make_Cloud(%args);
 }
   use Proc::Forkfunc;
   my @child_args = ($config, $filters, $species, $slipsites, $seqlength);
