--- a/make_distribution.html
+++ b/make_distribution.html
@@ -1,6 +1,6 @@
 Generating distribution for <% $species %>
 <%perl>
-my $cloud = new PRFGraph({config => $config});
+my $cloud = new PRFGraph(config => $config);
 my $pknots_only = undef;
 my $boot_table = "boot_$species";
 my $suffix = undef;
@@ -20,8 +20,8 @@ else {
   suffix .= "-${slipsites}";
 }
 $suffix .= "-${seqlength}";
-my $cloud_output_filename = $cloud->Picture_Filename({type => 'cloud', species => $species, suffix => $suffix,});
-my $cloud_url = $cloud->Picture_Filename({type => 'cloud', species => $species, url => 'url', suffix => $suffix,});
+my $cloud_output_filename = $cloud->Picture_Filename(type => 'cloud', species => $species, suffix => $suffix,);
+my $cloud_url = $cloud->Picture_Filename(type => 'cloud', species => $species, url => 'url', suffix => $suffix,);
 $cloud_url = $config->{base} . '/' . $cloud_url;
 my ($points_stmt, $averages_stmt, $points, $averages);    
 if (!-f $cloud_output_filename) {
@@ -39,17 +39,13 @@ if (!-f $cloud_output_filename) {
   }
   $points_stmt .= " mfe.genome_id = genome.id";
   $averages_stmt =~ s/AND $//g;
-  $points = $db->MySelect({statement => $points_stmt, vars => [$species]});
-  $averages = $db->MySelect({
-			     statement => $averages_stmt,
-			     vars => [$species],
-			     type => 'row', });
+  $points = $db->MySelect(statement => $points_stmt, vars => [$species]);
+  $averages = $db->MySelect(statement => $averages_stmt, vars => [$species], type => 'row',);
   #    }
   my $cloud_data;
-  my $args;
+  my %args;
   if (defined($pknots_only)) {
-    $args = {
-	     seqlength => $seqlength,
+    %args = (seqlength => $seqlength,
 	     species => $species,
 	     points => $points,
 	     averages => $averages,
@@ -57,10 +53,10 @@ if (!-f $cloud_output_filename) {
 	     url => $base,
 	     pknot => 1,
 	     slipsites => $slipsites
-	    };
+	    );
   }
   else {
-    $args = {
+    %args = (
 	     seqlength => $seqlength,
 	     species => $species,
 	     points => $points,
@@ -68,9 +64,9 @@ if (!-f $cloud_output_filename) {
 	     filename => $cloud_output_filename,
 	     url => $base,
 	     slipsites => $slipsites,
-	    };
+	    );
   }
-  $cloud_data = $cloud->Make_Cloud($args);
+  $cloud_data = $cloud->Make_Cloud(%args);
 }    
 if ($slipsites ne 'all') {
   $vars->{slipsites} = $slipsites;
@@ -78,8 +74,8 @@ if ($slipsites ne 'all') {
 $vars->{map_url} = "$vars->{cloud_url}" . '.map'; 
 $vars->{map_file} = "$vars->{cloud_file}" . '.map';
 
-my $extension_percent_filename = $cloud->Picture_Filename({type => 'extension_percent', species => $species,});
-my $extension_codons_filename = $cloud->Picture_Filename({type=> 'extension_codons', species => $species,});
+my $extension_percent_filename = $cloud->Picture_Filename(type => 'extension_percent', species => $species,);
+my $extension_codons_filename = $cloud->Picture_Filename(type=> 'extension_codons', species => $species,);
 $vars->{percent_map_file} = $extension_percent_filename . '.map';
 $vars->{codons_map_file} = $extension_codons_filename . '.map';
 
@@ -91,16 +87,9 @@ if (!-f $extension_percent_filename) {
 }
 my $bargraphs = qq"$config->{base}/images/cloud/$species/cloud-bar-percentsig.png";
 if (!-f $bargraphs) {
-  my $tmp_args = {
-		  seqlength => $seqlength,
-		  species => $species,
-		  points => $points,
-		  averages => $averages,
-		  filename => qq"$config->{base}/images/cloud/$species/cloud-all-AAAAAAA-100.png",
-		  url => $base,
-		  slipsites => 'AAAAAAA',
-		 };
-  my $cloud_data = $cloud->Make_Cloud($tmp_args);
+  my $cloud_data = $cloud->Make_Cloud(seqlength => $seqlength, species => $species, points => $points,
+	averages => $averages, filename => qq"$config->{base}/images/cloud/$species/cloud-all-AAAAAAA-100.png",
+	url => $base, slipsites => 'AAAAAAA',);
 }
 </%perl>
 
