some fixes to allow for more species to be added.

--- a/feynman_overlap.html
+++ b/feynman_overlap.html
@@ -46,7 +46,7 @@ if something goes wrong, darkslategray<br>
      </td></tr>
       <tr>
         <td text-align="right"><span style="whitespace: nowrap">
-	  <embed id="cfeynman" src="<% $overlap_url %>" align="bottom" width="<% $overlap_width %>" height="<% $overlap_height %>" border="0" pluginspage="http://www.adobe.com/svg/viewer/install/"></embed>
+	  <embed id="ofeynman" src="<% $overlap_url %>" align="bottom" width="<% $overlap_width %>" height="<% $overlap_height %>" border="0" pluginspage="http://www.adobe.com/svg/viewer/install/"></embed>
 	  </font>
         </span>
         </td>
