--- a/detail.html
+++ b/detail.html
@@ -3,20 +3,20 @@
 <input type="hidden" name="accession" value="<% $information->{accession} %>">
 
 <%init>
-  my $information;
+my $information;
 $information->{slipstart} = $slipstart;
 $db->Remove_Duplicates($accession);
 my ($detail_stmt, $info);
 if (!defined($slipstart)) {
   $detail_stmt = qq"SELECT * FROM mfe WHERE accession = ? ORDER BY start, seqlength DESC, algorithm DESC";
-  $info = $db->MySelect({statement => $detail_stmt, vars => [$accession,]});
+  $info = $db->MySelect(statement => $detail_stmt, vars => [$accession,]);
 } else {
   $detail_stmt = qq"SELECT * FROM mfe WHERE accession = ? AND start = ? ORDER BY seqlength DESC, algorithm DESC";
-  $info = $db->MySelect({statement => $detail_stmt, vars => [$accession,$slipstart]});
+  $info = $db->MySelect(statement => $detail_stmt, vars => [$accession,$slipstart]);
 }
 $information->{genome_id} = $info->[0]->[1];
 my $genome_stmt = qq"SELECT genename,species FROM genome where id = ?";
-my $genome_info = $db->MySelect({statement => $genome_stmt,vars => [$information->{genome_id}]});
+my $genome_info = $db->MySelect(statement => $genome_stmt,vars => [$information->{genome_id}]);
 $information->{genename} = $genome_info->[0]->[0];
 $information->{species} = $genome_info->[0]->[1];
 my $species = $information->{species};
@@ -26,7 +26,7 @@ foreach my $structure (@{$info}) {
   $information->{mfe} = $structure->[12];
   my $boot_table = "boot_$species";
   my $boot_stmt = qq"SELECT mfe_values, mfe_mean, mfe_sd, mfe_se, zscore FROM $boot_table WHERE mfe_id = ?";
-  my $boot = $db->MySelect({statement => $boot_stmt, type => 'row', vars=>[$mfe_id],});
+  my $boot = $db->MySelect(statement => $boot_stmt, type => 'row', vars=>[$mfe_id],);
   if (!defined($boot) and $config->{do_boot} == 2) {
     ## Add it to the webqueue
     $db->Set_Queue(id => $information->{genome_id}, queue_table => 'webqueue');
@@ -64,8 +64,8 @@ $structure->[8]
   }
   my $acc_slip = qq"$accession-$slipstart";
   my $feynman_pic = new PRFGraph(config=> $config, mfe_id => $mfe_id, accession => $accession);
-  $information->{feynman_url} = $feynman_pic->Picture_Filename({type=> 'feynman', url => 'url',});
-  my $feynman_output_filename = $feynman_pic->Picture_Filename({type => 'feynman', });
+  $information->{feynman_url} = $feynman_pic->Picture_Filename(type=> 'feynman', url => 'url',);
+  my $feynman_output_filename = $feynman_pic->Picture_Filename(type => 'feynman',);
   my $feynman_dimensions = {};
   if (!-r $feynman_output_filename) {
     $feynman_dimensions = $feynman_pic->Make_Feynman();
@@ -80,8 +80,8 @@ $structure->[8]
     my $chart = new PRFGraph(config => $config, real_mfe => $information->{mfe},
 			   list_data => \@mfe_values_array, accession  => $acc_slip, mfe_id => $mfe_id,);
     my $ppcc_values = $chart->Get_PPCC();
-    my $filename = $chart->Picture_Filename(type => 'distribution',);
-    my $pre_charturl = $chart->Picture_Filename(type => 'distribution', url => 'url',);
+    my $filename = $chart->Picture_Filename(type => 'distribution');
+    my $pre_charturl = $chart->Picture_Filename(type => 'distribution', url => 'url');
     $information->{charturl} = $pre_charturl;
     if (!-r $filename) {
       $chart = $chart->Make_Distribution();
