--- a/distribution.html
+++ b/distribution.html
@@ -20,7 +20,7 @@
 %  $filename = qq"$config->{base}/images/cloud/${species}/cloud-${slipsites}-${seqlength}.png";
 <img src="images/cloud/<% $species %>/cloud-<% $slipsites %>-<% $seqlength %>.png" usemap="#map">
 % }
-% print "TESTME $filename<br>\n";
+%# print "TESTME $filename<br>\n";
 % if (-f $filename) {
 
 </center>
