couple of small changes for better searching and blast

--- a/search.html
+++ b/search.html
@@ -122,6 +122,9 @@ my $long_species;
   To begin browsing the PRFdb, please enter your search terms below.<br>
   <input type="text" name="query"  size="20">
   <& species_selector.html, select_name => "search_species_limit" &>
+<br>
+  Choose a particular accession:  <input type="text" name="accession"  size="20">
+  Or gene name:    <input type="text" name="genename"  size="20">
   <input type="submit" name="search submit" value="Search"></form>
 </center>
 
