--- a/index_stats.html
+++ b/index_stats.html
@@ -1,12 +1,9 @@
-<%perl>
-my $sth = $dbh->prepare("SELECT * FROM index_stats order by species");
-$sth->execute or die "Couldn't get index_stats " . $dbh->errstr;
-</%perl>
 <table align="center" width="100%" border="0" cellspacing="2" cellpadding="2">
 <tr align="left" valign="top">
   <td width="20%">
     <p>
-% while (my $datum = $sth->fetchrow_hashref) {
+% my $data = $db->MySelect(statement => "SELECT * FROM index_stats ORDER BY species", type => 'list_of_hashes');
+% foreach my $datum (@{$data}) {
  <i><% $datum->{num_mfe_entries} %> <a href="/distribution.html?species=<% $datum->{species} %>&seqlength=100&slipsites=all"><% HTMLMisc::Make_Species($datum->{species}) %></a></i> sequence windows<br>
  comprising <% $datum->{num_mfe_knotted} %> of <% $datum->{num_genome} %> genes.<br><br>
 %}
